toolbar layout is a bit arranged..

--- a/android/2ne1monitor/app/src/main/res/values/strings.xml
+++ b/android/2ne1monitor/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name"> </string>
+    <string name="app_title">2ne1 monitor</string>
+    <string name="toolbar_imageview_descriptor">2ne1 icon</string>
     <string name="settings">Settings</string>
     <string name="new_session">Start a new session&#8230;</string>
     <string name="about">About&#8230;</string>
     <string name="new_session_header">Caution!</string>
     <string name="new_session_body">Are you sure to initiate a new session?\nConfirming it will cancel the on-going session and start a new session from now.</string>
-    <string name="site_to_load">http://192.168.219.102:12913</string>
+    <string name="site_to_load">http://192.168.1.145:12913</string>
 </resources>
